--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Adam Becerra. It uses data from  <a href="https://www.mapbox.com/">mapbox.com</a> and <a href="https://darksky.net/dev">darksky.net</a>.</p>
         <img class="portrait" src="/img/headshot.jpeg">
     </div>
 
